[gd_scene load_steps=7 format=3 uid="uid://bg8jhqhna2imn"]

[ext_resource type="Texture2D" uid="uid://6dhwsb6t2pbe" path="res://UI/assets/main_menu_background.png" id="1_rjhbh"]
[ext_resource type="Script" path="res://UI/scripts/main_menu_node.gd" id="1_ye78q"]
[ext_resource type="Script" path="res://UI/scripts/mainmenu.gd" id="2_nrms4"]
[ext_resource type="Theme" uid="uid://c877x8f6cbfhs" path="res://Themes/menu_button.tres" id="3_l767c"]
[ext_resource type="Script" path="res://UI/scripts/v_box_container.gd" id="3_w2384"]
[ext_resource type="AudioStream" uid="uid://cf5ri4e8fbfsc" path="res://Sounds/main_menu.ogg" id="5_knaht"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_ye78q")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -69.0
offset_top = -39.0
offset_right = 1331.0
offset_bottom = 749.0
texture = ExtResource("1_rjhbh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_nrms4")

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 481.0
offset_top = 241.0
offset_right = 711.0
offset_bottom = 388.0
theme_override_constants/separation = 20
script = ExtResource("3_w2384")

[node name="play" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../controls")
theme = ExtResource("3_l767c")
text = "Play"
flat = true

[node name="exit" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_l767c")
text = "Exit"
flat = true

[node name="controls" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../play")
theme = ExtResource("3_l767c")
text = "Controls"
flat = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_knaht")

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/play" to="CanvasLayer" method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/exit" to="CanvasLayer" method="_on_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/controls" to="CanvasLayer" method="_on_controls_pressed"]
